changes needed for fixing issues